--- a/libffplay/build.gradle
+++ b/libffplay/build.gradle
@@ -39,45 +39,10 @@ android {
 
     externalNativeBuild {
         cmake {
-            path "CMakeLists.txt"
+            path "src/main/cpp/CMakeLists.txt"
         }
     }
 
-    // Fix: More than one file was found
-    packagingOptions {
-        pickFirst 'lib/arm64-v8a/libswscale-4.so'
-        pickFirst 'lib/arm64-v8a/libavdevice-57.so'
-        pickFirst 'lib/arm64-v8a/libswresample-2.so'
-        pickFirst 'lib/arm64-v8a/libavcodec-57.so'
-        pickFirst 'lib/arm64-v8a/libavfilter-6.so'
-        pickFirst 'lib/arm64-v8a/libavformat-57.so'
-        pickFirst 'lib/arm64-v8a/libavutil-55.so'
-        pickFirst 'lib/arm64-v8a/libpostproc-54.so'
-        pickFirst 'lib/armeabi-v7a/libswscale-4.so'
-        pickFirst 'lib/armeabi-v7a/libavdevice-57.so'
-        pickFirst 'lib/armeabi-v7a/libswresample-2.so'
-        pickFirst 'lib/armeabi-v7a/libavcodec-57.so'
-        pickFirst 'lib/armeabi-v7a/libavfilter-6.so'
-        pickFirst 'lib/armeabi-v7a/libavformat-57.so'
-        pickFirst 'lib/armeabi-v7a/libavutil-55.so'
-        pickFirst 'lib/armeabi-v7a/libpostproc-54.so'
-        pickFirst 'lib/x86_64/libswscale-4.so'
-        pickFirst 'lib/x86_64/libavdevice-57.so'
-        pickFirst 'lib/x86_64/libswresample-2.so'
-        pickFirst 'lib/x86_64/libavcodec-57.so'
-        pickFirst 'lib/x86_64/libavfilter-6.so'
-        pickFirst 'lib/x86_64/libavformat-57.so'
-        pickFirst 'lib/x86_64/libavutil-55.so'
-        pickFirst 'lib/x86_64/libpostproc-54.so'
-        pickFirst 'lib/x86/libswscale-4.so'
-        pickFirst 'lib/x86/libavdevice-57.so'
-        pickFirst 'lib/x86/libswresample-2.so'
-        pickFirst 'lib/x86/libavcodec-57.so'
-        pickFirst 'lib/x86/libavfilter-6.so'
-        pickFirst 'lib/x86/libavformat-57.so'
-        pickFirst 'lib/x86/libavutil-55.so'
-        pickFirst 'lib/x86/libpostproc-54.so'
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
