--- a/mdvrset/src/main/AndroidManifest.xml
+++ b/mdvrset/src/main/AndroidManifest.xml
@@ -26,13 +26,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AISettings"
+        android:theme="@style/Theme.Normal"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name="com.flyzebra.mdrvset.MainActivity"
+            android:name="com.flyzebra.mdrvset.activity.WelcomeActivity"
             android:exported="true"
-            android:theme="@style/Theme.AISettings">
+            android:theme="@style/Theme.Normal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,11 +41,18 @@
         </activity>
 
         <activity
-            android:name="com.flyzebra.mdrvset.activity.MdvrActivity"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
+            android:name="com.flyzebra.mdrvset.activity.MdvrMainActivity"
+            android:configChanges="keyboardHidden|screenSize|orientation"
+            android:theme="@style/Theme.Normal" />
+
+        <activity
+            android:name="com.flyzebra.mdrvset.activity.MdvrFullActivity"
+            android:configChanges="keyboardHidden|screenSize|orientation"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.Full" />
 
         <activity
             android:name="com.flyzebra.mdrvset.activity.AdasSetActivity"
-            android:theme="@style/Theme.AISettings" />
+            android:theme="@style/Theme.Normal" />
     </application>
 </manifest>
